# staten-upphandlat-mcp

./: .gitignore  Dockerfile  README.md  debug_subprocess_test.py  llm.txt  pyproject.toml
.github/workflows/: build-and-update-helm.yml  build-docker-image.yml  ci-docker-helm.yml  update-helm.yml
examples/simple_chat/: chat_client.html  server.py  streamlit_chatbot_client.py  streamlit_client.py  test_endpoints.py
refdocs/: CONVENTIONS.md  SDKDOCS.md
src/upphandlat_mcp/: __init__.py  __main__.py  csv_sources.yaml  debug_server.py  server.py
src/upphandlat_mcp/core/: config.py
src/upphandlat_mcp/lifespan/: __init__.py  context.py
src/upphandlat_mcp/models/: mcp_models.py
src/upphandlat_mcp/tools/: aggregation_tools.py  info_tools.py
src/upphandlat_mcp/tools/aggregation/: __init__.py  aggregations.py  calculations.py  core.py  filters.py  summary.py
src/upphandlat_mcp/utils/: dataframe_ops.py
streamlit/: streamlit_client.py
tests/: conftest.py  test_aggregation_tools.py  test_chatbot_client.py  test_info_tools.py  test_lifespan.py  test_server.py
