[project]
name = "upphandlat-mcp"
version = "0.1.0"
description = "MCP server for CSV aggregation and analysis using Polars"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "mcp[cli]>=1.6.0", 
    "polars>=0.19.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.2",
    "rapidfuzz>=3.13.0",
]
authors = [
    { name = "Hugi Aegisberg", email = "hugi@sensestack.xyz" }
]

license = { text = "Apache-2.0" }

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
"Homepage" = "https://github.com/aerugo/upphandlat-mcp"
"Bug Tracker" = "https://github.com/aerugo/upphandlat-mcp/issues"

[project.scripts]
upphandlat-mcp = "upphandlat_mcp:main"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "PL", "PYI"]

[tool.pyright]
include = ["src/upphandlat_mcp"]
pythonVersion = "3.13"
reportMissingImports = "warning"
reportTypedDictNotRequiredAccess = "none"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
